test/FAIL/setcmd/invalid_arguments/13_test_set.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid argument "
#-------

load boucle.o
set mem 0x1000 word +0x13